@@ -5,8 +5,18 @@
 
 # Optimize Gradle
 ```
-Settings->Compiler->In Command line Options
+1. Settings->Compiler->In Command line Options
 -Pdisable-performance-plugin -PdevBuild --offline
+2. Gradle Offline - Avoids checking dependency updates
+3. gradle.properties
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx8192m -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.configureondemand=false
+android.useAndroidX=true
+android.enableJetifier=true
+org.gradle.caching=true
+android.enableBuildCache=true
 ```
 
 # Dependencies
